--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
         <img class="avatar" src="https://avatars.githubusercontent.com/u/000000?v=4" alt="Your avatar" />
         <div>
           <h1>Qian Hao Lam</h1>
-          <div class="tagline">FPGA • RISC‑V • Android • SDR • UVM</div>
+          <div class="tagline">FPGA • RISC‑V • SDR • UVM</div>
         </div>
       </div>
       <nav class="links" aria-label="Profile links">
         <a href="https://github.com/qiandawg">GitHub</a>
-        <a href="mailto:you@example.com">Email</a>
-        <a href="https://www.linkedin.com/in/<your-handle>">LinkedIn</a>
+        <a href="lamqianhao_96@hotmail.com">Email</a>
+        <a href="https://www.linkedin.com/in/qian-lam-115b63175/">LinkedIn</a>
       </nav>
     </header>
 
     <div class="search">
       <label class="sr-only" for="search">Filter projects</label>
-      <input id="search" type="search" placeholder="Filter projects by keyword (e.g., RISC‑V, Android, SDR)…" oninput="filterCards(this.value)" />
+      <input id="search" type="search" placeholder="Filter projects by keyword (e.g., RISC‑V, SDR)…" oninput="filterCards(this.value)" />
     </div>
 
     <main class="grid" id="projects">
@@ -106,22 +106,7 @@
         </div>
       </article>
 
-      <article class="card" data-tags="android jetpack compose kotlin offline datastore">
-        <img class="thumb" src="https://raw.githubusercontent.com/qiandawg/portfolio/main/assets/android-offline-dialog.png" alt="Android offline dialog feature screenshot" />
-        <div class="body">
-          <div class="title">Android Offline Dialog + Toast</div>
-          <p class="desc">Custom dialog (first offline), toast thereafter; DataStore for state, analytics events (viewed/tapped), and documented product telemetry.</p>
-          <div class="badges">
-            <span class="badge">Android</span><span class="badge">Kotlin</span><span class="badge">Compose</span>
-          </div>
-        </div>
-        <div class="footer">
-          <a class="btn primary" href="https://github.com/qiandawg/<android-repo>">View Repo</a>
-          <a class="btn" href="https://<playstore-or-demo>">Demo</a>
-        </div>
-      </article>
-
-      <article class="card" data-tags="uvm verification testbench sv">
+      <article class="card" data-tags="UVM projects">
         <img class="thumb" src="https://raw.githubusercontent.com/qiandawg/portfolio/main/assets/uvm.png" alt="UVM testbench screenshot" />
         <div class="body">
           <div class="title">Mini‑UVM Testbench (FIFO/AXI‑Lite)</div>
@@ -151,11 +136,11 @@
         </div>
       </article>
 
-      <article class="card" data-tags="paper ieee writeup github-pages">
+      <article class="card" data-tags="Static Timing Analysis Project">
         <img class="thumb" src="https://raw.githubusercontent.com/qiandawg/portfolio/main/assets/paper.png" alt="Paper/whitepaper preview" />
         <div class="body">
-          <div class="title">Paper: Teaching‑Focused RISC‑V Core</div>
-          <p class="desc">IEEE‑style write‑up with micro‑architecture diagrams, CSR/exception path, and evaluation; hosted as GitHub Pages PDF.</p>
+          <div class="title">Static Timing Analysis adventures</div>
+          <p class="desc">Analyzed various static timing analysis issues, including Total Negative slack issues, setup time violation, hold time violation, check timing critical warnings</p>
           <div class="badges">
             <span class="badge">Paper</span><span class="badge">Diagrams</span>
           </div>
