--- a/index.html
+++ b/index.html
@@ -105,6 +105,20 @@
 		  <a class="btn" href="SDR_Demo.mp4" target="_blank" rel="noopener">MP4 demo</a>
 		</div>
 	  </article>
+		
+	  <article class="card" data-tags="UVM application on Industrial Controller">
+		<img class="thumb" src="pytest_report_image.jpeg" alt="Example Python report" />
+		<div class="body">
+		  <div class="title">UVM Application on Industrial Controller (PLC)</div>
+		  <p class="desc">Developed a Python-based simulator that treated the PLC as a DUT, with the simulator acting as a testbench. Assertions will be summarized in a report showing pass/fail statistics.</p>
+		  <div class="badges">
+			<span class="badge">UVM</span><span class="badge">Directed testing</span><span class="badge">PLC</span>
+		  </div>
+		</div>
+		<div class="footer">
+		  <a class="btn primary" href="https://github.com/qiandawg/python-dut-testbench">View Repo</a>
+		</div>
+	  </article>
 	  <!-- ======= /END TEMPLATE ======= -->
 	</main>
 
