--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 	  </article>
 		
 	  <article class="card" data-tags="UVM application on Industrial Controller">
-		<img class="thumb" src="Report_Image.jpeg" alt="Example Python report" />
+		<img class="thumb" src="Report_Image.jpg" alt="Example Python report" />
 		<div class="body">
 		  <div class="title">UVM Application on Industrial Controller (PLC)</div>
 		  <p class="desc">Developed a Python-based simulator that treated the PLC as a DUT, with the simulator acting as a testbench. Assertions will be summarized in a report showing pass/fail statistics.</p>
