Added report for SDR

--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
 		</div>
 		<div class="footer">
 		  <a class="btn primary" href="https://github.com/qiandawg/riscv-fpu-interrupt">View Repo</a>
-		  <a class="btn" href="riscv-fpu-interrupts_paper.pdf" target="_blank" rel="noopener">Read PDF</a>
+		  <a class="btn" href="riscv-fpu-interrupts_paper.pdf" target="_blank" rel="noopener">Read report</a>
 		</div>
 	  </article>
 
 	  <article class="card" data-tags="sdr ethernet axi udp xilinx c zynq">
-		<img class="thumb" src="sdr_block_design.png" alt="Web-controlled SDR on FPGA screenshot" />
+		<img class="thumb" src="Web_interface_SDR.png" alt="Web-controlled SDR on Zybo Z7 FPGA" />
 		<div class="body">
 		  <div class="title">Web-Controlled SDR (FPGA + Zynq)</div>
 		  <p class="desc">AXI-Stream radio IP, FIFO buffering, UDP streaming to PC, and HTTPd control panel for tuner/ADC frequencies; C on PS + RTL on PL.</p>
@@ -102,7 +102,7 @@
 		</div>
 		<div class="footer">
 		  <a class="btn primary" href="https://github.com/qiandawg/rtl-SDR-fpga">View Repo</a>
-		  <a class="btn" href="SDR_Demo.mp4" target="_blank" rel="noopener">MP4 demo</a>
+		  <a class="btn" href="SDR_Project_Report.pdf" target="_blank" rel="noopener">Read report</a>
 		</div>
 	  </article>
 		
