added logfile parsing script

--- a/index.html
+++ b/index.html
@@ -119,6 +119,20 @@
 		  <a class="btn primary" href="https://github.com/qiandawg/python-dut-testbench">View Repo</a>
 		</div>
 	  </article>
+	  
+	  <article class="card" data-tags="Python Script for Log Parsing & Performance Analysis">
+		<img class="thumb" src="python_cache_performance_report.png" alt="One-pager high level diagram" />
+		<div class="body">
+		  <div class="title">Python Script for Log Parsing & Performance Analysis</div>
+		  <p class="desc">Developed a Python program to parse cache hit/miss logfile, perform caclulation, output performance statistics.</p>
+		  <div class="badges">
+			<span class="badge">Python</span><span class="badge">Cache performance calculation</span><span class="badge">Logfile parsing</span>
+		  </div>
+		</div>
+		<div class="footer">
+		  <a class="btn primary" href="https://github.com/qiandawg/python-logfile-parse-analyze-report">View Repo</a>
+		</div>
+	  </article>
 	  <!-- ======= /END TEMPLATE ======= -->
 	</main>
 
